--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "Key": "YourSuperSecretKeyYourSuperSecretKeyYourSuperSecretKey"
   },
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-EQ3B7VQ\\SQLSERVER2022;Database=RolesTesting;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost;Database=FCMB-AZR-MSTSTDB;user id=sa;password=Pamela1414?;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30"
   },
   "AllowedHosts": "*"
 }
